fixing long email overflowing from activity box

--- a/chime/static/stylesheets/main.css
+++ b/chime/static/stylesheets/main.css
@@ -2436,14 +2436,35 @@ input[type="submit"]:disabled:hover {
 }
 
 /* line 153, ../sass/templates/_activities-list.scss */
-.activity__author {
+.activity__status {
   margin: 0;
   font-size: 14px;
   color: #9e9e9e;
   font-weight: 400;
+  width: 100%;
 }
 
-/* line 160, ../sass/templates/_activities-list.scss */
+/* line 162, ../sass/templates/_activities-list.scss */
+.activity__author {
+  white-space: pre;
+  /* CSS 2.0 */
+  white-space: pre-wrap;
+  /* CSS 2.1 */
+  white-space: pre-line;
+  /* CSS 3.0 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla */
+  white-space: -hp-pre-wrap;
+  /* HP Printers */
+  word-wrap: break-word;
+  /* IE 5+ */
+}
+
+/* line 173, ../sass/templates/_activities-list.scss */
 .activity__actions {
   width: auto;
   margin-top: .5em;
@@ -2454,11 +2475,11 @@ input[type="submit"]:disabled:hover {
   border-top: 1px solid #eeeeee;
   padding-top: .5em;
 }
-/* line 173, ../sass/templates/_activities-list.scss */
+/* line 186, ../sass/templates/_activities-list.scss */
 .activity__actions .toolbar__item {
   color: #bdbdbd;
 }
-/* line 175, ../sass/templates/_activities-list.scss */
+/* line 188, ../sass/templates/_activities-list.scss */
 .activity__actions .toolbar__item:hover {
   color: #757575;
 }
